[gd_scene load_steps=13 format=3 uid="uid://dd4buxa54gig7"]

[ext_resource type="Script" path="res://Scenes/Principal.gd" id="1_f7wj2"]
[ext_resource type="Script" path="res://Scenes/aba_memoria.gd" id="1_k3qc3"]
[ext_resource type="Script" path="res://Scripts/Execução.gd" id="1_p8pv5"]
[ext_resource type="Script" path="res://Scenes/Programa.gd" id="1_xtbw1"]
[ext_resource type="Theme" uid="uid://cue378diorxs8" path="res://Themes/default.tres" id="2_h2p1t"]
[ext_resource type="PackedScene" uid="uid://b43gj8a6co0l6" path="res://Objects/registradores.tscn" id="2_pfwce"]
[ext_resource type="PackedScene" uid="uid://bm0k2wmg5ydh1" path="res://Objects/carregador_de_memoria.tscn" id="2_rec7b"]
[ext_resource type="PackedScene" uid="uid://jgcr8laoykqj" path="res://Objects/editor_de_programa.tscn" id="3_0ofiw"]
[ext_resource type="PackedScene" uid="uid://bfad576lrds1f" path="res://Objects/inspetor.tscn" id="4_6wfq0"]
[ext_resource type="PackedScene" uid="uid://cn15sjsyqk3sy" path="res://Objects/executor_de_programa.tscn" id="5_80ls4"]
[ext_resource type="PackedScene" uid="uid://cirseeqq4hnvy" path="res://Scenes/HexView.tscn" id="5_rebeb"]
[ext_resource type="PackedScene" uid="uid://c1uckvrljlsq3" path="res://Scenes/visualizador_de_instrução.tscn" id="6_ixvrv"]

[node name="Programa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xtbw1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Principal" type="TabBar" parent="VBoxContainer/TabContainer"]
layout_mode = 2
script = ExtResource("1_f7wj2")

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/TabContainer/Principal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/VBoxContainer" instance=ExtResource("2_rec7b")]
layout_mode = 2

[node name="HexView" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/VBoxContainer" instance=ExtResource("5_rebeb")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Registradores" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource("2_pfwce")]
layout_mode = 2

[node name="Inspetor" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource("4_6wfq0")]
unique_name_in_owner = true
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_h2p1t")

[node name="Programação" type="TabBar" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer"]
layout_mode = 2
script = ExtResource("1_k3qc3")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Programação"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_h2p1t")

[node name="Editor" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Programação/MarginContainer" instance=ExtResource("3_0ofiw")]
layout_mode = 2

[node name="Execução" type="TabBar" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("1_p8pv5")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Execução"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_h2p1t")

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Execução/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Execução/MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Execução/MarginContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Programa"

[node name="Panel" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Execução/MarginContainer/HSplitContainer/VBoxContainer2" instance=ExtResource("6_ixvrv")]
layout_mode = 2
size_flags_vertical = 3

[node name="Executor" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Execução/MarginContainer/HSplitContainer/VBoxContainer2" instance=ExtResource("5_80ls4")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Execução/MarginContainer/HSplitContainer/VBoxContainer2/Executor" index="0"]
text = "Endereço: "

[node name="Execução Visual" type="TabBar" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PCLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "PC: "

[node name="PCLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0000"

[node name="AvancarMicrocodigoButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Executa o próximo microcódigo localizado pelo Contador de Programa e interrompe a execução."
text = "Avançar microcódigo"

[node name="AvancarInstrucaoButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Executa a próxima instrução localizada pelo Contador de Programa e interrompe a execução."
text = "Avançar instrução"

[node name="ExecutarTudoButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Executa todas as instruções em sequência a partir do endereço pelo Contador de Programa até o próximo comando de parada ou instrução inválida."
text = "Executar tudo"

[connection signal="text_changed" from="VBoxContainer/MarginContainer/HBoxContainer/PCLineEdit" to="." method="_on_pc_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/AvancarMicrocodigoButton" to="." method="_on_avancar_microcodigo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/AvancarInstrucaoButton" to="." method="_on_avancar_instrucao_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ExecutarTudoButton" to="." method="_on_executar_tudo_button_pressed"]

[editable path="VBoxContainer/TabContainer/Principal/HSplitContainer/TabContainer/Execução/MarginContainer/HSplitContainer/VBoxContainer2/Executor"]
